--- a/index.html
+++ b/index.html
@@ -174,24 +174,116 @@
           <h1 class="fw-extr-bold stn-heading txt-c mb-30">
             Frequently Asked Questions
           </h1>
-          <ul class="questions-list">
-            <li class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-10">
-              What is Netflix?
+          <ul class="questions-list" role="list">
+            <li class="mb-5">
+              <span
+                class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-1"
+              >
+                What is Netflix?
+              </span>
+              <span
+                data-close="true"
+                class="accordion-menu d-block clr-neutral fs-normal p-20"
+              >
+                <span>
+                  Netflix is a streaming service that offers a wide variety of
+                  award-winning TV shows, movies, anime, documentaries, and more
+                  on thousands of internet-connected devices.
+                  <br /><br />
+                  You can watch as much as you want, whenever you want without a
+                  single commercial - all for one low monthly price. There's
+                  always something new to discover and new TV shows and movies
+                  are added every week!
+                </span>
+              </span>
             </li>
-            <li class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-10">
-              How much does Netflix cost?
+            <li class="mb-5">
+              <span
+                class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-1"
+              >
+                How much does Netflix cost?
+              </span>
+              <span
+                data-close="true"
+                class="accordion-menu d-block clr-neutral fs-normal p-20"
+              >
+                <span>
+                  Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
+                  streaming device, all for one fixed monthly fee. Plans range
+                  from EGP70 to EGP165 a month. No extra costs, no contracts.
+                </span>
+              </span>
             </li>
-            <li class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-10">
-              Where can I watch?
+            <li class="mb-5">
+              <span
+                class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-1"
+              >
+                Where can I watch?
+              </span>
+              <span
+                data-close="true"
+                class="accordion-menu d-block clr-neutral fs-normal p-20"
+              >
+                <span>
+                  Watch anywhere, anytime. Sign in with your Netflix account to
+                  watch instantly on the web at netflix.com from your personal
+                  computer or on any internet-connected device that offers the
+                  Netflix app, including smart TVs, smartphones, tablets,
+                  streaming media players and game consoles.
+                  <br /><br />
+                  You can also download your favorite shows with the iOS,
+                  Android, or Windows 10 app. Use downloads to watch while
+                  you're on the go and without an internet connection. Take
+                  Netflix with you anywhere.
+                </span>
+              </span>
             </li>
-            <li class="question | p-relative fs-normal d-flex justify-between p-20 pt-30 pb-30 clr-neutral mb-10">
-              How do I cancel?
+            <li class="mb-5">
+              <span
+                class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-1"
+              >
+                How do I cancel?
+              </span>
+              <span
+                data-close="true"
+                class="accordion-menu d-block clr-neutral fs-normal p-20"
+              >
+                <span>
+                  Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees - start or stop your account anytime.
+                </span>
+              </span>
             </li>
-            <li class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-10">
-              What can I watch on netflix?
+            <li class="mb-5">
+              <span
+                class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-1"
+              >
+                What can I watch on netflix?
+              </span>
+              <span
+                data-close="true"
+                class="accordion-menu d-block clr-neutral fs-normal p-20"
+              >
+                <span>
+                  Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
+                </span>
+              </span>
             </li>
-            <li class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral">
-              Is Netflix good for kids?
+            <li class="mb-5">
+              <span
+                class="question | p-relative fs-normal d-flex justify-between p-20 clr-neutral mb-1"
+              >
+                Is Netflix Good For Kids?
+              </span>
+              <span
+                data-close="true"
+                class="accordion-menu d-block clr-neutral fs-normal p-20"
+              >
+                <span>
+                  The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.
+                  <br><br>
+                  Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.
+                </span>
+              </span>
             </li>
           </ul>
           <div class="input-group p-relative txt-c mt-30">
@@ -220,7 +312,77 @@
       <!-- End Cards -->
 
       <!-- Start Footer -->
-      <footer></footer>
+      <footer class="stn-padding txt-neutral-alt">
+        <div class="pb-20">
+          <a href="#">Questions? Contact us</a>
+        </div>
+        <div class="pb-20">
+          <ul class="d-grid page-links" role="list">
+            <li>
+              <a href="https://help.netflix.com/support/412">FAQ</a>
+            </li>
+            <li>
+              <a href="https://help.netflix.com">Help Center</a>
+            </li>
+            <li>
+              <a href="/youraccount">Account</a>
+            </li>
+            <li>
+              <a href="https://media.netflix.com/">Media Center</a>
+            </li>
+            <li>
+              <a href="http://ir.netflix.com/">Investor Relations</a>
+            </li>
+            <li>
+              <a href="https://jobs.netflix.com/jobs">Jobs</a>
+            </li>
+            <li>
+              <a href="/watch">Ways to Watch</a>
+            </li>
+            <li>
+              <a href="https://help.netflix.com/legal/termsofuse"
+                >Terms of Use</a
+              >
+            </li>
+            <li>
+              <a href="https://help.netflix.com/legal/privacy">Privacy</a>
+            </li>
+            <li>
+              <a href="#">Cookie Preferences</a>
+            </li>
+            <li>
+              <a href="https://help.netflix.com/legal/corpinfo"
+                >Corporate Information</a
+              >
+            </li>
+            <li>
+              <a href="https://help.netflix.com/contactus">Contact Us</a>
+            </li>
+            <li>
+              <a href="https://fast.com">Speed Test</a>
+            </li>
+            <li>
+              <a href="https://help.netflix.com/legal/notices">Legal Notices</a>
+            </li>
+            <li>
+              <a href="https://www.netflix.com/eg-en/browse/genre/839338"
+                >Only on Netflix</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="pb-30">
+          <span class="select-button">
+            <i class="fa-solid fa-angle-down arrow-down arrow-down-2"></i>
+            <i class="fa-solid fa-globe globe globe-2"></i>
+            <select class="select-button-lang | ff-roboto">
+              <option value="english">English</option>
+              <option value="arabic">Arabic</option>
+            </select>
+          </span>
+        </div>
+        <p>Netflix Egypt</p>
+      </footer>
       <!-- End Footer -->
     </div>
     <script type="module" src="./public/js/main.js"></script>
