Added Responsive Part

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- End Devices Section -->
         <!-- Start Kids Account Section -->
         <section
-          class="kids-account d-flex align-center stn-padding fx-row-rev"
+          class="kids-account gap-1 d-flex align-center stn-padding fx-row-rev"
         >
           <div class="text fx-1">
             <h1 class="stn-heading fw-extr-bold">Create profiles for kids</h1>
